@@ -1,6 +1,6 @@
         _                  
  /\\  /|_) _ ._ _  __|_ _  
-/--\\/ | \(/_| | |(_)|_(/_ 
+/--\\/ | \(/_| | |(_)|_(/_   .. v0.3
 
  Small tool to send AVTransport commands to UPNP media services
 
